@@ -1,3 +1,6 @@
+Nov 10, 2023
+  gene loader: alternate assembly names are provided in config
+
 Oct 31, 2023
   gene loader: nomenclature events are no longer generated for genes having NOMEN_SOURCE='MGI'
     Note: The problem was that mgi-nomenclature-pipeline was renaming Ensembl genes, setting NOMEN_SOURCE='MGI',
